--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.3.0",
     "json-server": "^1.0.0-beta.3",
     "prettier": "^3.6.2",
+    "sass": "^1.89.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.35.1"
